Fix: Canvas container not aligning inner contents to center

--- a/style/main-container.css
+++ b/style/main-container.css
@@ -113,5 +113,9 @@ body {
 
 .main-canvas,
 .submenu-canvas {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
 }
